# fchat3-log-merger

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.yaml  args.rs  error.rs  main.rs  reader.rs  sorted_message.rs
src/args/: mod.rs  time_diff_arg.rs  timestamp_arg.rs
