[package]
name = "fchat3-log-merger"
version = "1.1.0"
authors = ["Carlen White <whitersuburban@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
fchat3-log-lib = {git = "https://github.com/WhiteHusky/fchat3-log-lib", branch = "hands-off"}

[dependencies.clap]
version = "~2"
features = ["yaml"]

[dependencies.humantime]
version = "~2"

[dependencies.log]
version = "~0"

[dependencies.pretty_env_logger]
version = "~0"

[dependencies.chrono]
version = "~0"

[dependencies.rayon]
version = "~1"

[dependencies.linya]
version = "~0"

[dependencies.humansize]
version = "~1"

[dependencies.thiserror]
version = "~1"