[package]
name = "fchat3-log-merger"
version = "1.1.0"
authors = ["Carlen White <whitersuburban@gmail.com>"]
edition = "2021"
description = "Reads multiple F-Chat 3.0 client log folders and merges them together"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
fchat3-log-lib = {git = "https://github.com/WhiteHusky/fchat3-log-lib", branch = "hands-off"}

[dependencies.clap]
version = "^3.0.4"
features = ["derive"]

[dependencies.humantime]
version = "^2.1.0"

[dependencies.log]
version = "^0.4.14"

[dependencies.pretty_env_logger]
version = "^0.4.0"

[dependencies.chrono]
version = "^0.4.19"

[dependencies.rayon]
version = "^1.5.1"

[dependencies.linya]
version = "^0.2.1"

[dependencies.humansize]
version = "^1.1.1"

[dependencies.thiserror]
version = "^1.0.30"